Fixing the alignment of buttons in hero section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@ body{
 /* LEFT SIDE */
 
 .hero-left{
-    padding-right: 0px;
+    padding-right: 1px;
     position: relative;
     z-index: 2;
 }
@@ -217,7 +217,6 @@ font-size: 60px;
 line-height: 75px;
 letter-spacing: -1.2px;
 vertical-align: middle;
-
 }
 
 .hero-text{
@@ -293,6 +292,8 @@ vertical-align: middle;
     height: 620px;
 }
 
+/* PURPLE BOX */
+
 .purple-box{
 position: absolute;
 left: -21.59px;
@@ -312,9 +313,6 @@ left: 0px;
 right: 0px;
 top: 0px;
 bottom: 0px;
-
-background: url(.png);
-
 }
 
 /* PHONE IMAGE */
@@ -325,8 +323,6 @@ height: 461.25px;
 left: 0px;
 right: 0px;
 top: calc(50% - 461.25px/2);
-
-background: url(.png);
 
 }
 @media(max-width:991px){
@@ -412,14 +408,7 @@ background: url(.png);
 /* CARDS ROW */
 
 .cards-row{
-  display: flex;
-  gap: 30px;
-  overflow: hidden; /* side cut effect */
-}
-
-.card-item{
-  min-width: 380px; /* card width fix */
-  flex: 0 0 auto;
+    row-gap: 30px;
 }
 
 /* CARD */
